# dioxus-bevy-test-1

./: .gitignore  Cargo.toml  Dioxus.toml  README.md
src/: main.rs
