[package]
name = "dioxus-bevy-test"
version = "0.1.0"
authors = ["SolidStateDj <solidstatedj@proton.me>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.197", features = ["derive"] }

dioxus = { version = "0.5", features = ["desktop"] }

# Debug
tracing = "0.1.40"
dioxus-logger = "0.5.0"
bevy = "0.13.2"
iyes_perf_ui = "0.2.3"
# bevy_image_export = "0.10.0"
tokio = "1.37.0"
# bevy = { version = "0.13.2", features = ["dynamic_linking"] }

[features]
default = []
server = ["dioxus/axum"]
web = ["dioxus/web"]

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[target.x86_64-unknown-linux-gnu]
linker = "clang"
rustflags = ["-C", "link-arg=-fuse-ld=/usr/bin/mold"]

[target.wasm32-unknown-unknown]
runner = "wasm-server-runner"

[toolchain]
channel = "nightly"

