[package]
name = "hw"
version = "0.1.0"
authors = ["SolidStateDj <solidstatedj@proton.me>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

dioxus = { version = "0.5", features = ["desktop"] }

# Debug
tracing = "0.1.40"
dioxus-logger = "0.5.0"
bevy = "0.13.2"
bevy_image_export = "0.10.0"
